prompt re-org de-suggest 1-1 IO
